<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">EcoCitizen</string>
    <string name="settings_activity">Settings</string>
    <string name="sentences_activity">Sentences</string>
    <string name="console_activity">Console</string>
    <string name="tabularview_activity">Tabular View</string>
    <string name="tabularviewplus_activity">Tabular View+</string>
    <string name="treeview_activity">Tree View</string>
    <string name="waitforgps_activity">Wait for GPS</string>
    <string name="debugtools_activity">Tools</string>
    <string name="devicelist_activity">Device List</string>
    <string name="fileuploader_activity">File Uploader</string>
    <string name="fileremover_activity">File Remover</string>
    <string name="addnote_activity">Add a note</string>
    <string name="multisensorview_activity">MultiSensor View</string>
    <string name="mapview_activity">Map View</string>
    <string name="msg_are_you_sure">Are you sure?</string> 
    <string name="msg_no_files">There are no files.</string>
    <string name="fileinfo_activity">File Info</string>
    <string name="disconnect_device_activity">disconnect device</string> 
    
    <string name="not_connected">You are not connected to a device</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to"></string>
    <string name="title_not_connected">not connected</string>
    <string name="title_connected_to_n_devices">devices</string>

    <!--  DeviceListActivity -->
    <string name="scanning">Scanning for devices...</string>
    <string name="select_device">Select a device to connect to</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="title_special_devices">Special Devices</string>
    <string name="dummy_device">GPS only (no sensor/dummy)</string>
    <string name="logfile_co2sample1">CO2Sample1.txt</string>
    <string name="logfile_co2sample2">CO2Sample2.txt</string>
	<string name="logfile_pollutionsample1">PollutionSample1.txt</string>

    <!-- DisconnectDevice -->
    <string name="disconnect_all">Disconnect All</string>
    
    <!-- Options Menu -->
    <string name="menu_home">Home</string>
    <string name="menu_co2view">CO2 View</string>
    <string name="menu_multisensorview">MultiSensor View</string>
    <string name="menu_graph">Graph</string>
    <string name="menu_map">Map View</string>
    <string name="menu_fileuploader">Upload data</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_debugtools">Tools</string>
    <string name="menu_quit">Quit</string>
    <string name="menu_connect">Connect a device</string>
    <string name="menu_disconnect">Disconnect device</string>
    <string name="menu_close">Close</string>
    <string name="menu_sentences">Sentences</string>
    <string name="menu_console">Console</string>
    <string name="menu_tabularview">Tabular View</string>
    <string name="menu_tabularviewplus">Tabular View+</string>
    
	<!-- Settings, preferences -->
    <string name="title_registerclient">Register Client</string>
    <string name="summary_registerclient">Obtain username and API key</string>
    
	<string name="category_mapserver">EcoCitizen map settings</string>
	<string name="category_storage">Data storage related settings</string>
	<string name="category_reset">Reset settings to defaults</string>
	
    <string name="title_about_preference">About</string>
    <string name="summary_about_preference">About EcoCitizen</string>
    <string name="dialog_title_about_preference">About EcoCitizen</string>
    <string name="text_about_ecocitizen">The goal of the EcoCitizen
        project is to build a public map of pollution data,
        where the more people contribute the better.
        By default, data uploading is anonymous,
        and that\'s perfect for all scientific purposes. 
        On the other hand, if you would like to keep track of your
        uploaded data on the map server, you can create an account and
        associate it with this application. To do that please visit
        this link: http://ecomobilecitizen.com/m/login/
        Note: this will not affect your privacy settings, so you
        can still keep your data uploads private if you want.
        </string>

    <string name="title_anonmode_preference">Anonymous mode</string>
    <string name="summary_anonmode_preference">If enabled, all data you upload will be anonymous and public</string>
    
    <string name="title_privatemode_preference">Private mode</string>
    <string name="summary_privatemode_preference">If enabled, all data you upload will be private and visible only by your account</string>
    
    <string name="title_username_preference">Username</string>
    <string name="summary_username_preference">Map server username</string>
    <string name="dialog_title_username_preference">Map server username</string>
    
    <string name="title_api_key_preference">API key</string>
    <string name="summary_api_key_preference">Map server API key</string>
    <string name="dialog_title_api_key_preference">Map server API key</string>
    
    <string name="title_map_server_url_preference">Map server URL</string>
    <string name="summary_map_server_url_preference">Map server URL</string>
    <string name="dialog_title_map_server_url_preference">Map server URL</string>
    
    <string name="title_externalstorage_preference">Use external storage</string>
    <string name="summary_externalstorage_preference">Try to save data files on external storage, or else on internal storage</string>

    <string name="title_rtupload_preference">Real-time uploading</string>
    <string name="summary_rtupload_preference">If enabled, sensor data will be uploaded in real-time</string>
    
    <string name="title_filesaver_preference">Save to local storage</string>
    <string name="summary_filesaver_preference">If enabled, sensor data will be saved to Android\'s storage</string>
    
	<string name="title_resetsettings">Reset to defaults</string>
	<string name="summary_resetsettings">Reset all settings to defaults</string>
	
	
    <!-- Tree view -->
    <string name="btn_connect_device">Connect to sensor</string>
    <string name="btn_disconnect_device">Disconnect sensor</string>
    <string name="msg_quit">Are you sure you want to quit?</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_close">Close</string>
    <string name="btn_scan_again">Scan again</string>
    <string name="btn_upload_all">Upload All</string>
    <string name="btn_upload_single">Upload</string>
    <string name="btn_delete_single">Delete</string>
    <string name="btn_text_mode">Switch to text</string>
    <string name="btn_hexa_mode">Switch to hexa</string>
    <string name="btn_addnote">OK</string>
	<string name="btn_upload">Upload</string>
	<string name="btn_delete">Delete</string>
    
    <!-- SensorMapUploaderService -->
    <string name="notification_smu_title">EcoCitizen Uploader Service</string>
    <string name="notification_smu_ticker">EcoCitizen Uploader Service</string>
    <string name="notification_smu_standby">Waiting for data ...</string>
    <string name="notification_smu_uploading">Uploading data ...</string>
    <string name="notification_smu_blocked">EcoCitizen unreachable!</string>
    <string name="notification_smu_loginerror">Login error! Check your settings.</string>
    
    <!-- FileUploadService -->
    <string name="title_internal_storage">Internal storage</string>
    <string name="title_external_storage">External storage</string>
    <string name="label_none">None</string>
    <string name="msg_fileuploader_hint">Tap on a file to start uploading!</string>
    
    <!-- Wait for GPS -->
    <string name="msg_waiting_for_gps">Waiting for GPS location ...</string>
    
    <!--  FileUploader activity -->
    <string name="fileuploader_msg_server_unreachable">The server is unreachable. Try again later or check your configuration.</string>
    <string name="fileuploader_msg_empty_file">File is empty.</string>
	<string name="fileuploader_msg_exception">Unknown error. It might be a temporary problem, try again later.</string>
	<string name="fileuploader_msg_login_failed">Login failed. Check your configuration.</string>
	<string name="fileuploader_msg_startsession_failed">The server did not return a valid session id.</string>
	<string name="fileuploader_msg_unknown_error">Unknown error.</string>
   	<string name="fileuploader_msg_upload_interrupted">Upload was interrupted.</string>
   	<string name="fileuploader_msg_upload_cancelled">Upload was cancelled.</string>
   	<string name="fileuploader_msg_upload_canceling">Canceling upload ...</string>
   	    	    	
	<!--  FileInfoActivity -->
	<string name="fileinfo_filename">Filename</string>
	<string name="fileinfo_date">Date</string>
	<string name="fileinfo_size">Size</string>
	<string name="fileinfo_recordnum">Records</string>
	<string name="msg_loading_fileinfo">Loading file info, please wait...</string>
	<string name="msg_upload_success">File was successfully uploaded.</string>
	<string name="msg_upload_failure">File upload failed.</string>
	<string name="msg_delete_success">File was successfully deleted.</string>
	<string name="msg_delete_failure">File delete failed.</string>
	<string name="msg_uploading">Uploading file. Please wait...</string>
	
	<!-- common strings -->
	<string name="common_na">N.A.</string>
	
	<string name="title_register_client">Register Client</string>
	<string name="msg_register_client">Registering client&#8230;</string>
	
</resources>
