<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2010-2012 Eco Mobile Citizen
    
    This file is part of EcoCitizen.

    EcoCitizen is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    EcoCitizen is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with EcoCitizen.  If not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <Preference
        android:enabled="false"
        android:key="build_id"
        android:summary=""
        android:title="Build ID" />

    <PreferenceCategory android:title="@string/category_mapserver" >
        <com.ecocitizen.app.RegisterClientPreference
            android:summary="@string/summary_registerclient"
            android:title="@string/title_registerclient" />

        <EditTextPreference
            android:defaultValue=""
            android:dialogTitle="@string/dialog_title_username_preference"
            android:key="username"
            android:summary="@string/summary_username_preference"
            android:title="@string/title_username_preference" />
        <EditTextPreference
            android:defaultValue=""
            android:dialogTitle="@string/dialog_title_api_key_preference"
            android:key="api_key"
            android:summary="@string/summary_api_key_preference"
            android:title="@string/title_api_key_preference" />
        <EditTextPreference
            android:defaultValue="http://dev.ecomobilecitizen.com/api/"
            android:dialogTitle="@string/dialog_title_map_server_url_preference"
            android:key="map_server_url"
            android:summary="@string/summary_map_server_url_preference"
            android:title="@string/title_map_server_url_preference" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/category_storage" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="filesaver"
            android:summary="@string/summary_filesaver_preference"
            android:title="@string/title_filesaver_preference" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="use_external_storage"
            android:summary="@string/summary_externalstorage_preference"
            android:title="@string/title_externalstorage_preference" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="rtupload"
            android:summary="@string/summary_rtupload_preference"
            android:title="@string/title_rtupload_preference" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/category_reset" >
        <com.ecocitizen.app.ResetSettingsPreference
            android:defaultValue=""
            android:key="resetsettings_preference"
            android:summary="@string/summary_resetsettings"
            android:title="@string/title_resetsettings" />
    </PreferenceCategory>

</PreferenceScreen>