<?xml version="1.0" encoding="utf-8"?>
	<!--
		Copyright (C) 2009 The Android Open Source Project Licensed under the
		Apache License, Version 2.0 (the "License"); you may not use this file
		except in compliance with the License. You may obtain a copy of the
		License at http://www.apache.org/licenses/LICENSE-2.0 Unless required
		by applicable law or agreed to in writing, software distributed under
		the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR
		CONDITIONS OF ANY KIND, either express or implied. See the License for
		the specific language governing permissions and limitations under the
		License.
	-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/menu_connect" android:icon="@drawable/connect"
		android:title="@string/menu_connect" />
	<item android:id="@+id/menu_disconnect" android:icon="@drawable/disconnect"
		android:title="@string/menu_disconnect" />
	<item android:id="@+id/menu_sentences" android:icon="@drawable/settings"
		android:title="Sentences" />
	<item android:id="@+id/menu_settings" android:icon="@drawable/settings"
		android:title="@string/menu_settings" />
	<item android:id="@+id/menu_console" android:icon="@drawable/settings"
		android:title="Console" />
	<item android:id="@+id/menu_home" android:icon="@drawable/home"
		android:title="@string/menu_home" />
	<item android:id="@+id/menu_graph" android:icon="@drawable/chart"
		android:visible="false"
		android:title="@string/menu_graph" />
	<item android:id="@+id/menu_map" android:icon="@android:drawable/ic_menu_mapmode"
		android:visible="false"
		android:title="@string/menu_map" />
	<item android:id="@+id/menu_quit" android:icon="@android:drawable/ic_lock_power_off"
		android:visible="false" android:title="@string/menu_quit" />
    <item android:id="@+id/menu_tabularview" android:title="@string/menu_tabularview" android:icon="@drawable/home"/>
</menu>
