<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2010 Mobile Environmental Sensing For Sustainable Cities
    
    This file is part of EcoCitizen.

    EcoCitizen is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    EcoCitizen is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with EcoCitizen.  If not, see <http://www.gnu.org/licenses/>.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/menu_connect" android:icon="@drawable/connect"
		android:title="@string/menu_connect" />
	<item android:id="@+id/menu_disconnect" android:icon="@drawable/disconnect"
		android:title="@string/menu_disconnect" />
	<item android:id="@+id/menu_multisensorview" android:icon="@drawable/settings"
		android:title="@+string/menu_multisensorview"/>
	<item android:id="@+id/menu_settings" android:icon="@drawable/settings"
		android:title="@string/menu_settings" />
	<item android:id="@+id/menu_graph" android:icon="@drawable/chart"
		android:visible="false" android:title="@string/menu_graph" />
	<item android:id="@+id/menu_map" android:icon="@android:drawable/ic_menu_mapmode"
		android:visible="false" android:title="@string/menu_map" />
	<item android:id="@+id/menu_fileuploader" android:icon="@drawable/connect"
		android:title="@string/menu_fileuploader" />
	<item android:id="@+id/menu_debugtools" android:title="@string/menu_debugtools"
		android:icon="@drawable/settings" />
	<item android:id="@+id/menu_quit" android:icon="@android:drawable/ic_lock_power_off"
		android:title="@string/menu_quit" />
</menu>
