<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2010-2012 Eco Mobile Citizen
    
    This file is part of EcoCitizen.

    EcoCitizen is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    EcoCitizen is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with EcoCitizen.  If not, see <http://www.gnu.org/licenses/>.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_graph"
        android:icon="@drawable/menu_graph"
        android:title="@string/menu_graph"
        android:visible="false"/>

    <item
        android:id="@+id/menu_fileuploader"
        android:icon="@drawable/menu_fileuploader"
        android:title="@string/menu_fileuploader"/>

    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/menu_settings"
        android:title="@string/menu_settings"/>

    <item
        android:id="@+id/menu_debugtools"
        android:icon="@drawable/menu_settings"
        android:title="@string/menu_debugtools"/>

    <item
        android:id="@+id/menu_disconnect"
        android:icon="@drawable/menu_disconnect"
        android:title="@string/menu_disconnect"/>

    <item
        android:id="@+id/menu_quit"
        android:icon="@drawable/menu_quit"
        android:title="@string/menu_quit"/>

</menu>
