<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2010-2012 Eco Mobile Citizen

    This file is part of EcoCitizen.

    EcoCitizen is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    EcoCitizen is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with EcoCitizen.  If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1" >

        <TableRow>

            <TextView
                style="@style/fileInfoLabelCol"
                android:text="@string/fileinfo_filename" />

            <TextView android:id="@+id/fileinfo_filename" />
        </TableRow>

        <TableRow>

            <TextView
                style="@style/fileInfoLabelCol"
                android:text="@string/fileinfo_date" />

            <TextView android:id="@+id/fileinfo_date" />
        </TableRow>

        <TableRow>

            <TextView
                style="@style/fileInfoLabelCol"
                android:text="@string/fileinfo_size" />

            <TextView android:id="@+id/fileinfo_size" />
        </TableRow>

        <TableRow>

            <TextView
                style="@style/fileInfoLabelCol"
                android:text="@string/fileinfo_recordnum" />

            <TextView android:id="@+id/fileinfo_recordnum" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/fileinfo_content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:scrollHorizontally="true"
        android:scrollbars="horizontal" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_delete"
            style="@style/button"
            android:layout_weight="1"
            android:text="@string/btn_delete"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_upload"
            style="@style/button"
            android:layout_weight="1"
            android:text="@string/btn_upload"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_close"
            style="@style/button"
            android:layout_weight="1"
            android:text="@string/btn_close" />
    </LinearLayout>

</LinearLayout>