<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2010-2012 Eco Mobile Citizen

    This file is part of EcoCitizen.

    EcoCitizen is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    EcoCitizen is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with EcoCitizen.  If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	
	<LinearLayout android:id="@+id/special_devices_section"
		style="@style/weighted_list_section">
		<TextView android:text="@string/title_special_devices" style="@style/list_title" />
		<ListView android:id="@+id/special_devices" style="@style/fill_width" />
	</LinearLayout>

	<LinearLayout android:id="@+id/paired_devices_section"
		style="@style/weighted_list_section">
		<TextView android:text="@string/title_paired_devices" style="@style/list_title" />
		<ListView android:id="@+id/paired_devices" style="@style/fill_width" />
	</LinearLayout>

	<LinearLayout android:id="@+id/new_devices_section" style="@style/weighted_list_section">
		<TextView android:text="@string/title_other_devices" style="@style/list_title" />
		<ListView android:id="@+id/new_devices" style="@style/fill_width" />
	</LinearLayout>

	<Button android:id="@+id/button_scan" style="@style/wideButton"
		android:text="@string/button_scan" />
</LinearLayout>
