<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2010-2012 Eco Mobile Citizen

    This file is part of EcoCitizen.

    EcoCitizen is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    EcoCitizen is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with EcoCitizen.  If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/internal_storage_section"
        style="@style/weighted_list_section" >

        <TextView
            style="@style/list_title"
            android:text="@string/title_internal_storage" />

        <ListView
            android:id="@+id/internal_storage"
            style="@style/fill_width" />

        <Button
            android:id="@+id/btn_upload_all_internal"
            style="@style/wideButton"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/external_storage_section"
        style="@style/weighted_list_section" >

        <TextView
            style="@style/list_title"
            android:text="@string/title_external_storage" />

        <ListView
            android:id="@+id/external_storage"
            style="@style/fill_width" />

        <Button
            android:id="@+id/btn_upload_all_external"
            style="@style/wideButton"
            android:visibility="gone" />
    </LinearLayout>

    <TextView
        style="@style/message"
        android:id="@+id/msg_no_files"
        android:text="@string/msg_no_files"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_close"
        style="@style/wideButton"
        android:text="@string/btn_close" />

</LinearLayout>