<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2010-2012 Eco Mobile Citizen
    
    This file is part of EcoCitizen.

    EcoCitizen is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    EcoCitizen is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with EcoCitizen.  If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TableLayout
        android:id="@+id/tblgps"
        style="@style/tabular" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                style="@style/tabularColumn"
                android:text="Latitude:" >
            </TextView>

            <TextView
                android:id="@+id/latitude_value"
                style="@style/tabularValueColumn" >
            </TextView>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                style="@style/tabularColumn"
                android:text="Longitude:" >
            </TextView>

            <TextView
                android:id="@+id/longitude_value"
                style="@style/tabularValueColumn" >
            </TextView>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                style="@style/tabularColumn"
                android:text="Accuracy:" >
            </TextView>

            <TextView
                android:id="@+id/accuracy_value"
                style="@style/tabularValueColumn" >
            </TextView>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                style="@style/tabularColumn"
                android:text="Altitude:" >
            </TextView>

            <TextView
                android:id="@+id/altitude_value"
                style="@style/tabularValueColumn" >
            </TextView>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                style="@style/tabularColumn"
                android:text="Bearing:" >
            </TextView>

            <TextView
                android:id="@+id/bearing_value"
                style="@style/tabularValueColumn" >
            </TextView>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                style="@style/tabularColumn"
                android:text="Speed:" >
            </TextView>

            <TextView
                android:id="@+id/speed_value"
                style="@style/tabularValueColumn" >
            </TextView>
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btn_cancel"
        style="@style/wideButton"
        android:text="@string/btn_cancel" />

    <Button
        android:id="@+id/btn_scan_again"
        style="@style/wideButton"
        android:text="@string/btn_scan_again"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_close"
        style="@style/wideButton"
        android:text="@string/btn_close"
        android:visibility="gone" />

</LinearLayout>